lttng: Disable tracepoints when building with clang

The STAP_PROBEV() macro from sdt.h (SystemTap) used by
the tracepoint() macro from lttng/tracepoint.h fails to
build with clang at the moment. Disable tracepoints
when building with clang until this is resolved.

See: http://sourceware.org/bugzilla/show_bug.cgi?id=13974